@@ -1,3 +1,5 @@
 = make 'Show potion abbreviation' show the correct colour
-= fixed Bingo Party message formatter triggering when it shouldn't
-= fixed Bingo Party message formatter custom prefix
+Bingo Party message formatter stuff:
++ add voicemail support 
+= fixed it triggering when it shouldn't
+= fixed custom prefix
